check aws image upload
